deploy/k8s/infrastructure/traefik/routes/jaeger.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: "jaeger-ingressroute"
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`infrastructure.localhost`) && PathPrefix(`/jaeger`)
      kind: Rule
      namespace: infrastructure
      services:
      - name: jaeger-query
        port: 16686
        path: /
        passHostHeader: true
